2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/PlotUtilities.java: New class,
	* source/org/jfree/data/general/DatasetUtilities.java
	(isEmptyOrNull(XYDataset)): Return early if not empty,
	* tests/org/jfree/data/general/junit/DatasetUtilitiesTests.java
	(testIsEmptyOrNullXYDataset): New test method.
	
2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/general/Series.java
	(getItemCount): New abstract method,
	(isEmpty): New method.
	
2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/XYPlot.java
	(getQuadrantPaint): Improve exception text,
	(setQuadrantPaint): Likewise,
	(getDomainAxisForDataset): Likewise,
	(getRangeAxisForDataset): Likewise.
	
2007-09-26  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/Marker.java
	(readObject): Initialise listener list,
	* tests/org/jfree/chart/plot/junit/ValueMarkerTests.java
	(test1802195): New test method.

2007-09-24  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/category/LineAndShapeRenderer.java
	(setUseOutlinePaint): Fire change event,
	(clone): Clone correct list for seriesShapesVisible.

2007-09-24  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/ChartPanel.java
	(paintComponent): Clear chart buffer before refreshing.
	
2007-09-24  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/ChartPanel.java
	(zoomAroundAnchor): New field,
	(getZoomAroundAnchor): New method,
	(setZoomAroundAnchor): Likewise,
	(zoomInDomain): Use zoomAroundAnchor flag,
	(zoomInRange): Likewise,
	(zoomOutDomain): Likewise,
	(zoomOutRange): Likewise,
	* source/org/jfree/chart/plot/CategoryPlot.java
	(zoomDomainAxes(double, PlotRenderingInfo, Point2D, boolean)): New method,
	(zoomRangeAxes(double, PlotRenderingInfo, Point2D)): Delegate to new method,